--- a/urly_api/api/templates/base.html
+++ b/urly_api/api/templates/base.html
@@ -10,7 +10,7 @@
         <a href="{% url 'logout' %}?next=/">Logout</a>
     {% else %}
         <a href="{% url 'login' %}">Login</a>
-        <a href="{% url 'user_create' %}">Create Account?</a>
+        <a href="{% url 'create_user' %}">Create Account?</a>
     {% endif %}
 
     <h1> Want to log in? </h1>
