--- a/urly_api/api/templates/base.html
+++ b/urly_api/api/templates/base.html
@@ -3,9 +3,10 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.css' %}">
 </head>
 <body>
-
+<div class="container-fluid">
     {% if request.user.id %}
         <a href="{% url 'logout' %}?next=/">Logout</a>
     {% else %}
@@ -19,5 +20,6 @@
         <input type="text" name="firstname">
         <br>
     </form>
+</div>
 </body>
 </html>
